<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AFAEA5"
    tools:context=".StartActivity"

    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:scaleType="centerCrop"
        android:contentDescription="@string/titleimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/vert1920_1080" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="251dp"
        android:layout_height="67dp"
        android:gravity="center"
        android:shadowColor="#787375"
        android:text="@string/app_name"
        android:textColor="#8B9BEC"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="251dp"
        android:layout_height="54dp"
        android:layout_marginTop="92dp"
        android:autofillHints="@string/input_your_name"
        android:clickable="false"
        android:gravity="center"
        android:hint="@string/input_your_name"
        android:textColorHint="#A7B8E8"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:maxLength="5"
        android:singleLine="true"
        android:textColor="#A7B8E8"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="Tables Schult" />

    <Button
        android:id="@+id/start"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginTop="84dp"
        android:text="@string/start"
        android:textColorHint="@color/colorAccent"
        android:textColorLink="#D1E8E6"
        android:shadowColor="#035048"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/setting"
        app:layout_constraintTop_toBottomOf="@+id/setting"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/setting"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/progress"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@+id/start" />


</androidx.constraintlayout.widget.ConstraintLayout>
